style.css
body {
    font-family: 'Noto Serif', serif;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    min-height: 100vh;
    margin: 0;
    padding: 0;
}

p {
    font-size: 1vw;
}

.intro-text {
    font-size: 6vw;
}

.intro-text .allura {
    font-family: 'Allura', cursive;
    font-size: 8vw;
}

p {
    margin: 0.5vw 0;
    font-weight: 500;
}

.highlight {
    color: #007c70;
}

.navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0.5vw;
    width: 100%;
    box-sizing: border-box;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1000;
}

.navbar a {
    padding-right: 0.5vw;
    font-size: 1.5vw;
}

footer {
    margin-top: auto;
    padding: 1vw 0;
    font-weight: 400;
    font-size: 1vw;
}

a {
    color: blueviolet;
    text-decoration: none;
}

a:hover {
    color: blue;
    text-decoration: underline;
}

.about-container {
    box-sizing: border-box;
    display: flex;
    align-items: center;
}

.image-container {
    flex: 1; 
    max-width: 30%;
    margin-right: 1vw;
}

.image-container img {
    width: 100%;
    height: auto;
    border-radius: 1vw;
}

.text-container {
    flex: 1;
    text-align: left;
}

.text-container p {
    font-weight: 500;
}

.contact-container {
    width: 25%;
    box-sizing: border-box;
    position: absolute;
    left: 50%;
    top: 50%;
    -webkit-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    align-items: center;
    text-align: left;
}

.wrapper {
    position: absolute;
    left: 50%;
    top: 50%;
    -webkit-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
}

.most-recent-song {
    margin: 1vw;
}

